elastic/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-stack
  labels:
    gateway-access: home-ingress
