elastic/ingress.yaml
# Kibana at https://es.home.datalab.gg via Tailscale -> Traefik.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic-stack
spec:
  ingressClassName: traefik
  rules:
    - host: es.home.datalab.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - es.home.datalab.gg
