elastic/kibana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: elastic-stack
spec:
  parentRefs:
    - name: home-ingress
      namespace: kube-system
      sectionName: https
  hostnames:
    - es.home.datalab.gg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kibana-kb-http
          port: 5601
